--- a/package.json
+++ b/package.json
@@ -23,11 +23,7 @@
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19",
-    "body-parser": "^1.18.2,
-    "cors": "^2.8.4",
-    "express": "^4.16.2",
-    "mongoose": "^5.0.3"
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.2",
